--- a/opentimer/AndroidManifest.xml
+++ b/opentimer/AndroidManifest.xml
@@ -13,13 +13,13 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
-        android:debuggable="true"
+        android:debuggable="false"
         android:icon="@drawable/icon_96"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.Light"
         uiOptions="splitActionBarWhenNarrow" >
         <activity
-            android:name=".TabHostFragmentActivity"
+            android:name=".OpenTimerActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Holo.Light" >
             <intent-filter>
@@ -30,7 +30,7 @@
         </activity>
 
         <service
-            android:name=".OpenTimerService"
+            android:name=".CountdownService"
             android:exported="false"
             android:label="@string/service_label" >
             <intent-filter>
