--- a/opentimer/AndroidManifest.xml
+++ b/opentimer/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.killerud.kitchentimer"
-    android:versionCode="4"
-    android:versionName="2.1" >
+    android:versionCode="5"
+    android:versionName="2.2" >
 
     <uses-sdk
         android:minSdkVersion="7"
@@ -13,7 +13,6 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
-        android:debuggable="false"
         android:icon="@drawable/icon_96"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.Light"
@@ -27,6 +26,12 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ConfigureActivity"
+            android:label="@string/configure"
+            android:theme="@android:style/Theme.Holo.Light">
         </activity>
 
         <service
